--- a/app/src/main/res/layout/content_merge.xml
+++ b/app/src/main/res/layout/content_merge.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -8,21 +9,21 @@
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
+	android:id="@+id/merge_layout"
 	android:orientation="vertical"
 	app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	tools:context="csm117.localdocs.EditorActivity"
-	tools:showIn="@layout/activity_editor">
+	tools:context="csm117.localdocs.MergeActivity"
+	tools:showIn="@layout/activity_merge">
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="0dp"
-		android:layout_weight="1"
-		android:text="Hello World!" />
-	<!-- Uncomment the following to test the merge page -->
-	<!-- <Button
+	<!-- <EditText android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="merge text should appear here"
+		/> -->
+
+	<Button
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/start_merge"
-		android:onClick="startMerge"
-	/> -->
+		android:text="@string/accept_merge"
+		/>
+
 </LinearLayout>
