Added working bluetooth, send and retrieve doc

--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -7,6 +7,10 @@
 	android:fitsSystemWindows="true"
 	tools:context="csm117.localdocs.EditorActivity">
 
+	<EditText android:id="@+id/editor"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" />
+
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -28,6 +32,14 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
+		android:layout_margin="@dimen/fab_margin"
+		android:src="@android:drawable/ic_dialog_email" />
+
+	<android.support.design.widget.FloatingActionButton
+		android:id="@+id/fabRetrieve"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|start"
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_dialog_email" />
 
