Note: TextListActivity is still broken in this version - comment out code to run project. Changes to EditorActivity to prevent crash when running in emulator.  With these changes, emulator can start without crashing (still crashes if bluetooth functionality used). Changes to MergeActivity related files reflect a possible user interface for the merge.  Not finished, but runs.

--- a/app/src/main/res/layout/content_merge.xml
+++ b/app/src/main/res/layout/content_merge.xml
@@ -15,11 +15,24 @@
 	tools:context="csm117.localdocs.MergeActivity"
 	tools:showIn="@layout/activity_merge">
 
-	<!-- <EditText android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="merge text should appear here"
-		/> -->
-
+	<TextView android:layout_width="wrap_content"
+			android:layout_height="0dp"
+			android:layout_weight="1"
+			android:id="@+id/myText"
+			android:text=""
+		/>
+	<TextView android:layout_width="wrap_content"
+			  android:layout_height="0dp"
+			  android:layout_weight="1"
+			  android:id="@+id/mergeText"
+			  android:text=""
+		/>
+	<TextView android:layout_width="wrap_content"
+			  android:layout_height="0dp"
+			  android:layout_weight="1"
+			  android:id="@+id/theirText"
+			  android:text=""
+		/>
 	<Button
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
