--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -43,4 +43,15 @@
 		android:layout_margin="@dimen/fab_margin"
 		android:src="@android:drawable/ic_dialog_email" />
 
+	<Button
+		android:id="@+id/fileList"
+		android:text="List of files"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="center|end"
+		android:onClick="switchActivity"
+		android:layout_margin="@dimen/fab_margin"
+		android:layout_above="@id/fab"
+		android:src="@android:drawable/ic_dialog_email" />
+
 </android.support.design.widget.CoordinatorLayout>
