--- a/app/src/main/res/layout/content_merge.xml
+++ b/app/src/main/res/layout/content_merge.xml
@@ -18,18 +18,21 @@
 	<TextView android:layout_width="wrap_content"
 			android:layout_height="0dp"
 			android:layout_weight="1"
+			android:scrollbars="vertical"
 			android:id="@+id/myText"
 			android:text=""
 		/>
 	<TextView android:layout_width="wrap_content"
 			  android:layout_height="0dp"
 			  android:layout_weight="1"
+			  android:scrollbars="vertical"
 			  android:id="@+id/mergeText"
 			  android:text=""
 		/>
 	<TextView android:layout_width="wrap_content"
 			  android:layout_height="0dp"
 			  android:layout_weight="1"
+			  android:scrollbars="vertical"
 			  android:id="@+id/theirText"
 			  android:text=""
 		/>
