--- a/app/src/main/res/layout/content_compare_change.xml
+++ b/app/src/main/res/layout/content_compare_change.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="csm117.diff.CompareChangeActivity"
+    tools:context=".CompareChangeActivity"
     tools:showIn="@layout/activity_compare_change">
 
     <ScrollView
