--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -31,6 +31,7 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|end"
 		android:layout_margin="@dimen/fab_margin"
+		android:onClick="sendDocumentButton"
 		android:src="@android:drawable/ic_dialog_email" />
 
 	<android.support.design.widget.FloatingActionButton
@@ -39,6 +40,7 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom|start"
 		android:layout_margin="@dimen/fab_margin"
+		android:onClick="retrieveDocumentButton"
 		android:src="@android:drawable/ic_dialog_email" />
 
 
