Added ability to save with file name and cleaned up EditorActivity class

--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -50,21 +50,13 @@
 		android:layout_alignParentLeft="true"
 		android:layout_alignParentStart="true" />
 
-	<TextView
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:textAppearance="?android:attr/textAppearanceMedium"
-		android:text="File Name:"
-		android:id="@+id/textView"
-		android:layout_below="@+id/fileList"
-		android:layout_centerHorizontal="true" />
-
 	<EditText
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:id="@+id/fileName"
-		android:layout_below="@+id/textView"
-		android:layout_centerHorizontal="true" />
+		android:layout_centerHorizontal="true"
+		android:hint="File Name"
+		android:layout_below="@+id/fileList" />
 
 	<!-- Uncomment the following to test the merge page -->
 	<!-- <Button
