Added 3merge code Changed 2merge interface to use RelativeLayout instead of nested LinearLayouts Added 2merge and 3merge test buttons to the editor activity.

--- a/app/src/main/res/layout/content_compare_change.xml
+++ b/app/src/main/res/layout/content_compare_change.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/compare_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,11 +10,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_gravity="start"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".CompareChangeActivity"
     tools:showIn="@layout/activity_compare_change">
 
-    <ScrollView
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
@@ -21,5 +23,5 @@
             android:id="@+id/compare_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </ScrollView>
+    </ScrollView> -->
 </RelativeLayout>
