--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorRed">#BB0000</color>
     <color name="colorGreen">#00BB00</color>
+    <color name="colorDullYellow">#BBBB88</color>
 </resources>
