--- a/app/src/main/res/layout/content_merge.xml
+++ b/app/src/main/res/layout/content_merge.xml
@@ -15,13 +15,13 @@
 	tools:context="csm117.localdocs.MergeActivity"
 	tools:showIn="@layout/activity_merge">
 
-	<TextView android:layout_width="wrap_content"
+	<!--<TextView android:layout_width="wrap_content"
 			android:layout_height="0dp"
 			android:layout_weight="1"
 			android:scrollbars="vertical"
 			android:id="@+id/myText"
 			android:text=""
-		/>
+		/>-->
 	<TextView android:layout_width="wrap_content"
 			  android:layout_height="0dp"
 			  android:layout_weight="1"
@@ -29,16 +29,17 @@
 			  android:id="@+id/mergeText"
 			  android:text=""
 		/>
-	<TextView android:layout_width="wrap_content"
+	<!--<TextView android:layout_width="wrap_content"
 			  android:layout_height="0dp"
 			  android:layout_weight="1"
 			  android:scrollbars="vertical"
 			  android:id="@+id/theirText"
 			  android:text=""
-		/>
+		/>-->
 	<Button
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:onClick="accept"
 		android:text="@string/accept_merge"
 		/>
 
