Added Button to create new Doc in Text List Activity I haven't tested it yet, so if you're getting errors running the whole app, ignore the modified part. Will resolve this ASAP

--- a/app/src/main/res/layout/file_list.xml
+++ b/app/src/main/res/layout/file_list.xml
@@ -11,4 +11,15 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 	</ListView>
+
+	<Button
+		android:id="@+id/create_new_doc"
+		android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+		android:text="Create New Doc"
+		android:onClick="selfDestruct"
+		android:layout_alignParentTop="true"
+		android:layout_alignRight="@+id/list_view"
+		android:layout_alignEnd="@+id/list_view">
+	</Button>
 </RelativeLayout>
