--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorRed">#BB0000</color>
-    <color name="colorGreen">#00BB00</color>
+    <color name="colorRed">#BB2222</color>
+    <color name="colorGreen">#66BB66</color>
+    <color name="colorBlue">#6666BB</color>
     <color name="colorDullYellow">#BBBB88</color>
 </resources>
