Renabled code to prevent saving to empty file.

--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -19,7 +19,7 @@
 		android:layout_height="wrap_content"
 		android:text="Save"
 		android:id="@+id/btnSave"
-		android:enabled="true"
+		android:enabled="false"
 		android:onClick="saveDoc"
 		android:layout_marginBottom="126dp"
 		android:layout_alignParentBottom="true"
