Production version: Fixed missalignment of merge buttons - though buttons are now kind of small and hard to hit. Removed (commented out) the test merge buttons.

--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -61,7 +61,7 @@
 		android:layout_below="@+id/fileList" />
 
 	<!-- Uncomment the following to test the merge page -->
-	<Button
+	<!-- <Button
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="Test 2 merge"
@@ -77,5 +77,5 @@
 		android:onClick="test3Merge"
 		android:id="@+id/test3merge"
 		android:layout_centerHorizontal="true"
-		android:layout_below="@id/test2merge" />
+		android:layout_below="@id/test2merge" /> -->
 </RelativeLayout>
