Re-fixed problem where reject button was moved off screen. Centered the filename text

--- a/app/src/main/res/layout/content_editor.xml
+++ b/app/src/main/res/layout/content_editor.xml
@@ -58,7 +58,8 @@
 		android:id="@+id/fileName"
 		android:layout_centerHorizontal="true"
 		android:hint="File Name"
-		android:layout_below="@+id/fileList" />
+		android:layout_below="@+id/fileList"
+		android:gravity="center"/>
 
 	<!-- Uncomment the following to test the merge page -->
 	<!-- <Button
